Fix reactive computation